--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class="col-sm-6 col-sm-offset-3">
 
-      <div class="panel margin-top30">
+      <div class="margin-top30">
         <div class="panel-heading text-center background">
           <h4 class="white">アカウント登録</h4>
         </div>
