--- a/app/views/toppage/index.html.erb
+++ b/app/views/toppage/index.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
-  <img src="/images/top_about.png" class="img">
-
+  <h3>Sharemadeについて</h3>
+  <p>準備中…</p>
 <% else %>
   <div class="welcome text-center">
     <h1 class="welcometitle">Sharemade <i class="fas fa-share-alt"></i></h1>
