--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,19 +1,14 @@
-<div class="row margin-top20">
+<div class="row">
   <div class="col-sm-9 col-sm-push-3">
-    <div class="panel">
-      <div class="panel-heading partition">
-        <h5><i class="fas fa-star"></i> 注目の作品</h5>
-      </div>
-      <div class="panel-body eachbody">
-        <% if @results == [] %>
-          <div class="text-muted eachcontent">
-            作品はありません
-          </div>
-        <% end %>
-        <%= render 'results/results', results: @results %>
-      </div>
+    <div class="home-content good-b-bottom margin-bottom10"><i class="fas fa-star icon good-bg"></i> 注目の作品</div>
+      <% if @results == [] %>
+        <div class="text-muted eachcontent">
+          作品はありません
+        </div>
+      <% end %>
+      <%= render 'results/results', results: @results %>
     </div>
-  </div>
 
-  <%= render 'layouts/home_nav'%>
+    <%= render 'layouts/home_nav'%>
+  </div>
 </div>
