--- a/app/views/layouts/_home_nav.html.erb
+++ b/app/views/layouts/_home_nav.html.erb
@@ -1,12 +1,14 @@
-<div class="col-sm-3 col-sm-pull-9">
-  <ul class="nav nav-pills nav-stacked">
+<div class="col-sm-3 col-sm-pull-9  margin-top20">
+  <ul class="nav nav-pills nav-stacked text-center">
+    <li role="presentation" class="<%= 'active' if current_page?(results_path) %>"><a href="/results" ><i class="fas fa-share-alt"></i> 最新の作品</a></li>
+    <li role="presentation" class="<%= 'active' if current_page?(good_ranking_path) %>"><a href="/good_ranking"><i class="fas fa-star"></i> 注目の作品</a></li>
+    <li role="presentation" class="<%= 'active' if current_page?(users_path) %>"><a href="/users"><i class="fas fa-users"></i> ユーザー</a></li>
+
+    <div class="partition margin-top10 margin-bottom10"></div>
     <li role="presentation">
       <%= link_to user_path(current_user) do %>
         <i class="fas fa-user"></i> マイページ
       <% end %>
     </li>
-    <li role="presentation" class="<%= 'active' if current_page?(results_path) %>"><a href="/results" ><i class="fas fa-share-alt"></i> 最新の作品</a></li>
-    <li role="presentation" class="<%= 'active' if current_page?(good_ranking_path) %>"><a href="/good_ranking"><i class="fas fa-star"></i> 注目の作品</a></li>
-    <li role="presentation" class="<%= 'active' if current_page?(users_path) %>"><a href="/users"><i class="fas fa-users"></i> ユーザー</a></li>
   </ul>
 </div>
