--- a/app/views/results/_results.html.erb
+++ b/app/views/results/_results.html.erb
@@ -1,12 +1,35 @@
+<div class='row'>
   <% results.each do |result| %>
-    <div class='eachcontent partition'>
-      <%= result.subtitle %>
-      <h4><%= link_to result.title, result_path(result) %></h4>
-      <div class="text-muted">
-        <span class="margin-right10">by <%= link_to result.user.name, user_path(result.user) %></span>
-        <span class="margin-right10"><%= time_ago_in_words(result.created_at) %></span>
-        <span class="margin-right10"><i class="fas fa-thumbs-up"></i> <%= result.good_users.count %></span>
-        <span class="margin-right10"><i class="far fa-comment"></i> <%= result.comments.count %></span>
+    <div class="result">
+      <div class="col-sm-4 col-xs-12">
+        <div class="panel panel-info">
+
+          <div class="panel-heading text-center">
+            <% if result.image.url != nil %>
+              <%= image_tag result.image.url, class: 'img' %>
+            <% else %>
+              <div class="no_img_content">
+                <img src="/images/no_image.png" alt="no_image" class="no_img">
+                NO IMAGE
+              </div>
+            <% end %>
+          </div>
+
+          <div class="panel-body">
+            <div><%= result.subtitle %></div>
+            <div ><%= link_to result.title, result_path(result) %></div>
+
+            <div><small>by <%= link_to result.user.name, user_path(result.user) %></small></div>
+            
+            <div class="text-muted">
+              <span class="margin-right10"><%= time_ago_in_words(result.created_at) %></span>
+              <span class="margin-right10"><i class="fas fa-thumbs-up"></i> <%= result.good_users.count %></span>
+              <span class="margin-right10"><i class="far fa-comment"></i> <%= result.comments.count %></span>
+            </div>
+          </div>
+          
+        </div>
       </div>
     </div>
   <% end %>
+</div>
