--- a/app/views/users/_user_show.html.erb
+++ b/app/views/users/_user_show.html.erb
@@ -1,6 +1,7 @@
 <div class="row margin-top20">
+
   <div class="col-sm-3">
-    <div class="panel">
+    <div class="panel panel-default">
       <div class="panel-heading partition text-center">
         <span><%= user.name %></span>
       </div>
@@ -18,30 +19,26 @@
   </div>
 
   <div class="col-sm-9">
-    
     <%= link_to user_path(user), style: 'text-decoration: none' do %>
-      <span class="btn btn-default <%= 'btn-info' if current_page?(user_path(user)) %>">
-        作品  <span class="badge"><%= user.results.count %></span>
+      <span class="btn nomalbtn <%= 'now' if current_page?(user_path(user)) %>">
+        作品 <span class="badge"><%= user.results.count %></span>
       </span>
     <% end %>
     
     <%= link_to goods_user_path(user), style: 'text-decoration: none' do %>
-      <span class="btn btn-default <%= 'btn-warning' if current_page?(goods_user_path(user)) %>">
+      <span class="btn goodbtn <%= 'now' if current_page?(goods_user_path(user)) %>">
         いいねした作品 <span class="badge"><%= user.good_results.count %></span>
       </span>
     <% end %>
 
-    <div class="panel margin-top10">
-      <div class="panel-body eachbody">
-        <% if results == [] %>
-          <div class="text-muted eachcontent">
-            作品はありません
-          </div>
-        <% end %>
+    <div class="margin-top10">
+      <% if results == [] %>
+        <div class="text-muted eachcontent">
+          作品はありません
+        </div>
+      <% end %>
 
-        <%= render 'results/results', results: results %>
-      </div>
+      <%= render 'results/results', results: results %>
     </div>
   </div>
-
 </div>
