--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,8 @@
-<div class="row margin-top20">
+<div class="row">
   <div class="col-sm-9 col-sm-push-3">
-    <div class="panel">
-      <div class="panel-heading partition">
-        <h5><i class="fas fa-users"></i> ユーザー</h5>
-      </div>
-      <div class="panel-body eachbody">
-        <%= render 'users/users', users: @users%>
-      </div>
+    <div class="home-content users-b-bottom margin-bottom10"><i class="fas fa-users icon users-bg"></i> ユーザー</div>
+    <div class="panel-body eachbody">
+      <%= render 'users/users', users: @users%>
     </div>
   </div>
 
