--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,7 @@
 
       <div class="panel-body">
         <div class="form-group">
-          <%= f.label :name, 'ユーザ名' %>
+          <%= f.label :name, 'ユーザー名' %>
           <%= f.text_field :name, class: 'form-control'%>
         </div>
 
@@ -52,23 +52,16 @@
         </div>
       </div>
       
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <div class="form-group text-center">
-            <%= f.label :current_password do %> 現在のパスワード <span class="label label-danger">必須</span><% end %>
-            <%= f.password_field :current_password, autocomplete: "current-password", placeholder: '保存には現在のパスワードが必要です', class: 'form-control', required: true %>
-          </div>
-          <div class="text-center">
-            <%= f.submit '保存する', class: 'btn btn-info'%>
-          </div>
-        </div>
+      <div class="text-center">
+        <%= f.submit '保存する', class: 'btn btn-info'%>
       </div>
-      
     <% end %>
 
-    <div class="text-center margin-top10">
+    <div class="partition margin-top30 margin-bottom10"></div>
+    
+    <div class="text-center">
       <%= button_to "アカウントを削除する", registration_path(resource_name),
-                    data: { confirm: "アカウントを削除しますか?" }, method: :delete, class: "btn btn-danger margin-top10" %>
+                    data: { confirm: "アカウントに関連する情報が全て削除されます。本当に削除しますか?" }, method: :delete, class: "btn btn-danger margin-top10" %>
     </div>
   </div>
 </div>
