--- a/app/views/layouts/_home_nav.html.erb
+++ b/app/views/layouts/_home_nav.html.erb
@@ -5,10 +5,19 @@
     <li role="presentation" class="<%= 'active' if current_page?(users_path) %>"><a href="/users"><i class="fas fa-users"></i> ユーザー</a></li>
 
     <div class="partition margin-top10 margin-bottom10"></div>
+
     <li role="presentation">
       <%= link_to user_path(current_user) do %>
         <i class="fas fa-user"></i> マイページ
       <% end %>
     </li>
+    <li role="presentation"><a href="/users/edit" ><i class="fas fa-cog"></i> ユーザー情報</a></li>
+
+    <div class="partition margin-top10 margin-bottom10"></div>
+
+    <li>
+      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: { confirm: "ログアウトしますか？" } %>
+    </li>
+
   </ul>
 </div>
