--- a/app/views/results/_results.html.erb
+++ b/app/views/results/_results.html.erb
@@ -9,7 +9,7 @@
               <%= image_tag result.image.url, class: 'img' %>
             <% else %>
               <div class="no_img_content">
-                <img src="/images/no_image.png" alt="no_image" class="no_img">
+                <img src="/images/no_img.png" alt="no_image" class="no_img">
                 NO IMAGE
               </div>
             <% end %>
