--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -23,7 +23,7 @@
           <% if @result.image.url != nil %>
             <%= image_tag @result.image.url, class: 'img' %>
           <% else %>
-            <img src="/images/no_image.png" alt="no_image" class="no_img">
+            <img src="/images/no_img.png" alt="no_image" class="no_img">
             NO IMAGE
           <% end %>
          </div>
