--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -19,7 +19,7 @@
         </div>
 
         <div class="row">
-         <div class="text-center margin-bottom20">
+         <div class="text-center image-box margin-bottom10">
           <% if @result.image.url != nil %>
             <%= image_tag @result.image.url, class: 'img' %>
           <% else %>
