ログイン後のrootページ変更

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,19 +1,20 @@
 <header>
   <div class="container">
+    <a href="/" class='navlogo'>Sharemade</a>
+
     <% if user_signed_in? %>
-      <a href="/results" class='navlogo'>Sharemade</a>
       <span class="dropdown">
         <button class="btn navpull dropdown-toggle" type="button" data-toggle="dropdown">
           <i class="far fa-caret-square-down"></i>
         </button>
         <ul class="dropdown-menu" role="menu">
-          <li><a href='/results'><i class="fas fa-share-alt"></i> 最新の作品</a></li>
+          <li><a href='/'><i class="fas fa-share-alt"></i> 最新の作品</a></li>
           <li class="divider"></li>
           <li><a href='/good_ranking'><i class="fas fa-star"></i> 注目の作品</a></li>
           <li class="divider"></li>
           <li><a href='/users'><i class="fas fa-users"></i> ユーザー</a></li>
           <li class="divider"></li>
-          <li><a href='/'>Sharemadeについて</a></li>
+          <%# <li><a href='/about_sharemade'>Sharemadeについて</a></li> %>
         </ul>
       </span>
 
@@ -43,7 +44,6 @@
       <% end %>
       
     <% else %>
-      <a href="/" class='navlogo'>Sharemade</a>
       <%= link_to new_user_session_path, class: 'white' do %>
         <span class="btn pull-right navfont">
           <span>ログイン</span>
