--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,11 +25,11 @@
 }
 
 .color {
-  color: #2BCDD3;
+  color: #08d1d8;
 }
 
 .background {
-  background: #2BCDD3;
+  background: #08d1d8;
 }
 
 .good-bg {
@@ -50,7 +50,7 @@
 
 header {
   height: 50px;
-  background: #2BCDD3;
+  background: #08d1d8;
   color: #fff;
 }
 
@@ -82,7 +82,7 @@ footer {
   padding-left: 6px;
   color: #272e2e;
   font-size: 23px;
-  background: #2BCDD3;
+  background: #08d1d8;
 }
 
 .navicon {
@@ -104,7 +104,7 @@ footer {
 
 .signin-navfont {
   font-size: 13px;
-  background: #11b5bb;
+  background: #1ec6cc;
 }
 
 .signup {
@@ -119,7 +119,7 @@ footer {
   padding: 50px 40px 150px 40px;
   color: #fff;
   background-color: #f7f7f7;
-  background-image: linear-gradient(0deg, #f7f7f7 2%, #69f1f7 18%, #2bcdd3 50%);
+  background: #08d1d8;
 }
 
 .welcometitle {
@@ -133,19 +133,19 @@ footer {
 
 .welcomebtn {
   color: #fff;
-  border-bottom: 2px solid #fff;
+  border: 1px solid #35a3a7;
   margin: 20px 15px;
-  border-radius: 0;
+  background: #35a3a7
 }
 
 .welcomebtn:hover {
-  color: #2bcdd3;
-  background: #fff;
+  color: #fff;
+  background: #18868a;
 }
 
 .nomalbtn {
-  color: #2bcdd3;
-  border: 2px solid #2bcdd3;
+  color: #08d1d8;
+  border: 2px solid #08d1d8;
   background: #fff;
   padding: 6px 30px;
 }
@@ -153,7 +153,7 @@ footer {
 .nomalbtn:hover,
 .nomalbtn.now {
   color: #fff;
-  background: #2bcdd3;
+  background: #08d1d8;
 }
 
 .goodbtn {
@@ -178,11 +178,11 @@ footer {
 }
 
 .nav-pills > li.active > a {
-  background: #2bcdd3;
+  background: #08d1d8;
 }
 
 .nav-pills > li.active > a:hover {
-  background: #11b5bb;
+  background: #1ec6cc;
 }
 
 .partition {
@@ -202,7 +202,7 @@ footer {
 }
 
 .border-left {
-  border-left: 4px solid #2bcdd3;
+  border-left: 4px solid #08d1d8;
 }
 
 .padding-left {
@@ -278,7 +278,7 @@ footer {
 }
 
 .b-bottom {
-  border-bottom: 3px solid #2bcdd3;
+  border-bottom: 3px solid #08d1d8;
 }
 
 .good-b-bottom {
