--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
         <ul class="dropdown-menu" role="menu">
           <li><a href='/'><i class="fas fa-share-alt"></i> 最新の作品</a></li>
           <li class="divider"></li>
-          <li><a href='/good_ranking'><i class="fas fa-star"></i> 注目の作品</a></li>
+          <li><a href='/good_ranking'><i class="fas fa-crown"></i> いいねランキング</a></li>
           <li class="divider"></li>
           <li><a href='/users'><i class="fas fa-users"></i> ユーザー</a></li>
           <li class="divider"></li>
