--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -57,8 +57,13 @@
     <div class="partition margin-top30 margin-bottom10"></div>
     
     <div class="text-center">
-      <%= button_to "アカウントを削除する", registration_path(resource_name),
-                    data: { confirm: "アカウントに関連する情報が全て削除されます。本当に削除しますか?" }, method: :delete, class: "btn btn-danger margin-top10" %>
+      <%= form_for(resource, as: resource_name, url:registration_path(resource_name),
+                    html: { method: :delete },
+                    data: {confirm: 'アカウントに関連する情報が全て削除されます。本当に削除しますか?'},
+                    class: 'btn btn-danger') do |f| %>
+        <%= hidden_field_tag :user_id, current_user.id %>
+        <%= f.submit 'アカウントを削除する', class: 'btn btn-danger margin-top10' %>
+      <% end %>
     </div>
   </div>
 </div>
