--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,14 @@
-<div class="row">
-  <div class="col-sm-9 col-sm-push-3">
-    <div class="home-content users-b-bottom margin-bottom10"><i class="fas fa-users icon users-bg"></i> ユーザー</div>
-    <div class="panel-body eachbody">
-      <%= render 'users/users', users: @users%>
-    </div>
-  </div>
+<%= render 'layouts/welcome' %>
 
-  <%= render 'layouts/home_nav'%>
+<div class="container margin-top10">
+  <div class="row">
+    <div class="col-sm-9 col-sm-push-3">
+      <div class="home-content users-b-bottom margin-bottom10"><i class="fas fa-users icon users-bg"></i> ユーザー</div>
+      <div class="panel-body eachbody">
+        <%= render 'users/users', users: @users%>
+      </div>
+    </div>
+
+    <%= render 'layouts/home_nav'%>
+  </div>
 </div>
