--- a/app/views/toppage/index.html.erb
+++ b/app/views/toppage/index.html.erb
@@ -1,5 +1,7 @@
-<% if user_signed_in? %>
- <%# 最新の作品 %>
+<%= render 'layouts/welcome' %>
+
+<%# 最新の作品 %>
+<div class="container margin-top10">
   <div class="row">
     <div class="col-sm-9 col-sm-push-3">
       <div class="home-content b-bottom margin-bottom10"><i class="fas fa-share-alt icon background"></i> 最新の作品</div>
@@ -14,32 +16,4 @@
       <%= render 'layouts/home_nav'%>
     </div>
   </div>
-<% else %>
-  <div class="welcome text-center">
-    <h1 class="welcometitle">Sharemade <i class="fas fa-share-alt"></i></h1>
-    <span>みんなの「作った」をシェアする</span>
-     
-    <h5 class="welcomecontent">自分で作ったアプリやサイトの共有スペース</h5>
-    <h4>みんなの作品を見てみよう !</h4>
-      
-    <a class='btn welcomebtn' href="/users/sign_up">アカウント作成</a>
-    <a class='btn welcomebtn' href="/users/sign_in">ログイン</a>
-  </div>
-
-  <div>
-    <div class="container-fluid text-center margin-top10">
-      <div class="col-md-4 top-content">
-        <i class="fas fa-external-link-alt fa-4x"></i>
-        <h4>作品を見る</h4>
-      </div>
-      <div class="col-md-4 top-content">
-        <span class=""><i class="far fa-thumbs-up fa-4x"></i></span>
-        <h4>いいね</h4>
-      </div>
-      <div class="col-md-4 top-content">
-        <span class=""><i class="far fa-comment fa-4x"></i></span>
-        <h4>コメント</h4>
-      </div>
-    </div>
-  </div>
-<% end %>
+</div>
