デザイン修正

--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -5,11 +5,12 @@
     
     <div class="welcomecontent">
       <h5>自分で作ったアプリやサイトの共有スペース</h5>
-      <h5>ポートフォリオを登録しよう!</h5>
+      <h5><i class="fas fa-caret-right"></i> みんなの作品を見てみよう</h5>
+      <h5><i class="fas fa-caret-right"></i> 作った作品を登録しよう</h5>
     </div>
     
       
-    <a class='btn welcomebtn' href="/users/sign_up">アカウント作成</a>
+    <a class='btn welcomebtn' href="/users/sign_up">アカウント登録</a>
     <a class='btn welcomebtn' href="/users/sign_in">ログイン</a>
   </div>
 <% end %>
