--- a/app/views/results/_results.html.erb
+++ b/app/views/results/_results.html.erb
@@ -27,7 +27,7 @@
             
             <div class="text-muted">
               <span class="margin-right10"><%= time_ago_in_words(result.created_at) %></span>
-              <span class="margin-right10"><i class="fas fa-thumbs-up"></i> <%= result.good_users.count %></span>
+              <span class="margin-right10"><i class="fas fa-thumbs-up orange"></i> <%= result.good_users.count %></span>
               <span class="margin-right10"><i class="far fa-comment"></i> <%= result.comments.count %></span>
             </div>
           </div>
