--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,6 +48,10 @@
   color: #52b311;
 }
 
+.orange {
+  color: #f79b24;
+}
+
 header {
   height: 50px;
   background: #08d1d8;
@@ -56,7 +60,7 @@ header {
 
 body {
   word-wrap: break-word;
-  background: #75695e1a;
+  background: #e7dace1a;
 }
 
 footer {
@@ -121,11 +125,12 @@ footer {
 }
 
 .welcome {
-  padding: 50px 40px 80px 40px;
+  padding: 50px 40px 30px 40px;
   color: #fff;
   background-color: #08d1d8;
   background-image: url("/images/topimg.png");
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-position: center;
 }
 
@@ -140,7 +145,7 @@ footer {
   padding: 4px;
   border-radius: 15px;
   width: 300px;
-  margin: 20px auto auto auto ;
+  margin: 35px auto auto auto ;
 }
 
 .welcomebtn {
