image for heroku

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -128,7 +128,7 @@ footer {
   padding: 50px 40px 30px 40px;
   color: #fff;
   background-color: #08d1d8;
-  background-image: url("/images/topimg.png");
+  background-image: url("/images/top_img.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
